# blocklet

./: .SRCINFO  .gitignore  AUR_GUIDE.md  CHANGELOG.md  COPR_GUIDE.md  Cargo.toml  PKGBUILD  PUBLISHING.md  PUBLISH_QUICK_START.md  README.md  blocklet.rb  blocklet.spec  build-and-release.ps1  update-hashes.ps1
.github/workflows/: release.yml
benches/: rendering.rs
choco/: blocklet.nuspec
choco/tools/: chocolateyinstall.ps1
debian/: control
src/: font.rs  main.rs  renderer.rs
winget/: blocklet.installer.yaml  blocklet.locale.en-US.yaml  blocklet.yaml
