[package]
name = "blocklet"
version = "0.1.0"
edition = "2021"
authors = ["Tanav Malhotra <tanavm2009@gmail.com>"]
description = "A cross-platform CLI tool that generates ASCII art using Unicode block characters, similar to figlet but with beautiful solid Unicode blocks instead of outlines or hash symbols."
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/tanav-malhotra/blocklet"
repository = "https://github.com/tanav-malhotra/blocklet"
keywords = ["cli", "ascii-art", "figlet", "unicode", "terminal"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rendering"
harness = false
